@@ -1,31 +1,0 @@
-NTPmodel,Numeric,2, NTP model in use, see documentation
-AAmodel,Numeric,2, AA model in use, see documentation
-Transcription_Rate, Expression, log(2)/(RNA_Length/50), 50 NTP/second transcription
-Translation_Rate, Expression, log(2)/(Protein_Length/0.64), 1.5 AA/second translation 
-
-DNA_RecBCD_Forward, Numeric, 0.4, 
-DNA_RecBCD_Reverse, Numeric, 0.1,
-DNA_RecBCD_complex_deg, Numeric, 0.5, 
-
-Protein_ClpXP_Forward, Numeric, 0.5 ,
-Protein_ClpXP_Reverse, Numeric, 0.0001 ,
-Protein_ClpXP_complex_deg, Numeric, 0.1, 
-
-RNAP_S70_F, Numeric, 100,
-RNAP_S70_R, Numeric, 0.01,
-
-GamS_RecBCD_F, Numeric, 1, ! TODO: update these numbers based on measurements
-
-AA_Forward,Expression,log(2) / 0.1, binding rate of 1 ms
-AA_Reverse,Expression, 1 * log(2) / 0.1, Km of 100 for amino acid usage 10uM
-
-RNA_deg,Expression,log(2)/(60*98), mRNA degradation: 12 min half life
-
-Ribosome_Binding_F, Expression, log(2)/0.1, 100 ms bind rate
-Ribosome_Binding_R, Expression, 0.05 * log(2)/0.1, Km of ~0.05 (from VN model)
-
-NTP_Forward,Expression, log(2) / 0.1, binding rate of 100 ms
-NTP_Reverse,Expression, 10 * log(2) / 0.1, Km of 100 for NTP usage 500uM 6920 
-
-NTP_Concentration, Expression, 4*(12000)*0.6, 4 types of NTPs, 17% usability 0.035
-AA_Concentration, Expression, 20*15000, 20 tyes of AAs, 20% usability
