@@ -1,9 +1,9 @@
+addpath([pwd '/auxiliary'])
 addpath([pwd '/components'])
+addpath([pwd '/config'])
 addpath([pwd '/core'])
 addpath([pwd '/examples'])
 addpath([pwd '/examples/CompanionFiles'])
-addpath([pwd '/mcmc'])
-addpath([pwd '/auxiliary'])
 addpath([pwd '/tests'])
 
 
